--- a/index.html
+++ b/index.html
@@ -15,95 +15,95 @@
             <div class="botoes">
                 <button class="botao ativo">Curso de informatica</button>
                 <button class="botao">passar no enem</button>
-                <button class="botao">Comecar a trabalhar</button>
+                <button class="botao">Comecar a estagiar</button>
                 <button class="botao">viajar</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                    <h3 class="aba-conteudo-titulo-principal">concluir o curso de informatica</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
-                            <p class="contador-digito-texto">dias</p>
+                            <p class="contador-digito-texto">  16 dias</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="horas0"></p>
-                            <p class="contador-digito-texto">horas</p>
+                            <p class="contador-digito-texto">  64 horas</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="min0"></p>
-                            <p class="contador-digito-texto">min</p>
+                            <p class="contador-digito-texto"> 3840 min</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="seg0"></p>
-                            <p class="contador-digito-texto">seg</p>
+                            <p class="contador-digito-texto"> 2300400 seg</p>
                         </div>
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
+                    <h3 class="aba-conteudo-titulo-principal">passar no enem</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias1"></p>
-                            <p class="contador-digito-texto">dias</p>
+                            <p class="contador-digito-texto"> 213 dias</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="horas1"></p>
-                            <p class="contador-digito-texto">horas</p>
+                            <p class="contador-digito-texto">5112 horas</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="min1"></p>
-                            <p class="contador-digito-texto">min</p>
+                            <p class="contador-digito-texto">306720 min</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="seg1"></p>
-                            <p class="contador-digito-texto">seg</p>
+                            <p class="contador-digito-texto">18403200 seg</p>
                         </div>
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Começar a estagiar</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias2"></p>
-                            <p class="contador-digito-texto">dias</p>
+                            <p class="contador-digito-texto">91 dias</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="horas2"></p>
-                            <p class="contador-digito-texto">horas</p>
+                            <p class="contador-digito-texto">2184 horas</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="min2"></p>
-                            <p class="contador-digito-texto">min</p>
+                            <p class="contador-digito-texto"> 131040 min</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="seg2"></p>
-                            <p class="contador-digito-texto">seg</p>
+                            <p class="contador-digito-texto">7862400 seg</p>
                         </div>
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
+                    <h3 class="aba-conteudo-titulo-principal">viajar</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias3"></p>
-                            <p class="contador-digito-texto">dias</p>
+                            <p class="contador-digito-texto">37 dias</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="horas3"></p>
-                            <p class="contador-digito-texto">horas</p>
+                            <p class="contador-digito-texto">888 horas</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="min3"></p>
-                            <p class="contador-digito-texto">min</p>
+                            <p class="contador-digito-texto">53280 min</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="seg3"></p>
-                            <p class="contador-digito-texto">seg</p>
+                            <p class="contador-digito-texto">3196800 seg</p>
                         </div>
                     </div>
                 </div>
